--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,22 @@
 {
     "env": {
         "browser": true,
-        "es6": true,
-        "jquery": true
+        "es6": true
     },
     "extends": "eslint:recommended",
     "rules": {
         "indent": [
             "error",
-            4
+            "tab"
         ],
         "linebreak-style": [
             "error",
             "unix"
         ],
-        // "quotes": [s
-        //     "error",
-        //     "single"
-        // ],
+        "quotes": [
+            "error",
+            "double"
+        ],
         "semi": [
             "error",
             "always"
