--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "^3.12.2"
+  },
   "devDependencies": {
     "eslint": "^3.12.1"
   },
